[metadata]
name = pymochad
summary = A python library for interacting with moch
homepage = http://github.com/mtreinish/pymochad
description-file =
    README.rst
description_content_type = text/x-rst; charset=UTF-8
author = Matthew Treinish
author-email = mtreinish@kortar.org
project_urls =
    Bug Tracker = https://github.com/mtreinish/pymochad/issues
    Documentation = https://pymochad.readthedocs.io/en/latest/readme.html
    Source Code = https://github.com/mtreinish/pymochad
classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[files]
packages =
    pymochad
